objects/Account.object
<CustomObject>
    <fields>
        <fullName>acco__c</fullName>
        <label>acco</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>demo__c</fullName>
        <label>demo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myfirstcustomfield__c</fullName>
        <label>myfirstcustomfield</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newfield1__c</fullName>
        <label>newfield1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>record0</fullName>
        <active>true</active>
        <label>record0</label>
    </recordTypes>
    <recordTypes>
        <fullName>record1</fullName>
        <active>true</active>
        <label>record1</label>
    </recordTypes>
    <recordTypes>
        <fullName>record11</fullName>
        <active>true</active>
        <label>record11</label>
    </recordTypes>
    <recordTypes>
        <fullName>record2</fullName>
        <active>true</active>
        <label>record2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>